# lego-sorter

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
bayesian/: __init__.py
catalogue/: __init__.py
classification/: __init__.py
classification/batch/: __init__.py  batch.py
classification/brickognize_client/: __init__.py  client.py
data/: __init__.py  schema.py  store.py
docs/: PROJECT_BRIEF.md  architecture.md
docs/decisions/: 0001-scan-only-default-deferred-classification.md
machine/: __init__.py  config.py
machine/capture/: __init__.py  frame.py  sources.py
machine/motors/: __init__.py
machine/orchestrator/: __init__.py  phase1.py
machine/vision/: __init__.py  crop.py
scripts/: make_synthetic_belt_images.py
tests/: test_pipeline.py
