[project]
name = "lego-sorter"
version = "0.1.0"
description = "Transportable Lego sorting machine + Bayesian collection-estimator (ground-truth data generator)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pydantic>=2.5",
    "requests>=2.31",
]

[project.optional-dependencies]
# Hardware-only deps. Installed on the Raspberry Pi; imported lazily elsewhere so
# the rest of the code runs and is testable on a laptop.
pi = [
    "picamera2; platform_system == 'Linux'",
    "buildhat; platform_system == 'Linux'",
]
# Research module (kept out of the machine runtime).
bayes = [
    "pymc>=5.10",
    "arviz>=0.17",
    "pandas>=2.1",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["machine*", "classification*", "catalogue*", "bayesian*", "data*"]

[tool.ruff]
line-length = 100
target-version = "py310"
